Implement entities and repositories